--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 
     <div class="container">
 
-      <h1><a href="index.html">Prerak Raja</a></h1>
-      <h2 style="color:#fff">I'm <span class="typing" style="color:#12D640"></span></h2>
+      <h1><a href="index.html">Dillan Marroquin</a></h1>
+      <h2 style="color:#fff"><span class="typing" style="color:#12D640"></span></h2>
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li class="active"><a href="#header"> <span>Home</span></a></li>
@@ -106,21 +106,23 @@
           <img src="assets/img/profile.jpeg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <p>Focused and enthusiastic developer with a keen interest in software development and artificial intelligence. By comprehensive exposure
-            to the underlying concepts and applying them vividly to various projects, my love for these domains came into being.
-            I am a passionate individual who thrives to build and apply algorithms to solve real-world industry problems.
+          <p>Greetings! I am Dillan Marroquin, a Google Certified Data Analyst and current Data Entry Specialist.
+
+I am a former high school teacher having taught math and statistics for 3 years in WCSD and CCSD in Nevada. Due to my B.S. in Secondary Education and technical teaching background, I excel at breaking down complexity and communicating with simplicity. Additionally, my B.S. in Discrete Math and Statistics has trained me in various statistical software with my greatest tools being SQL and Spreadsheets for data cleaning, R for data analysis, and a touch of Tableau for visualization.
+
+My desire is to combine my teaching background with my experience in data and become a shining data analyst. I hope that my experience, skills, and above all my passion speak to you.
           </p>
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 12 October 1996</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +1 480-401-8112</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> November 27, 2000</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +1 (702) 339-5968 (Career inquiries only)</li>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Tempe, AZ</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> rajaprerak@gmail.com</li>
+                <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Sparks, NV</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> di11marro@gmail.com</li>
               </ul>
             </div>
           </div>
