--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
     <div class="container">
 
-      <h1><a href="index.html">Dillan Marroquin</a></h1>
+      <h1><a href="index.html">Dillan Marroquin   </a></h1>
       <h2 style="color:#fff"><span class="typing" style="color:#12D640"></span></h2>
       <nav class="nav-menu d-none d-lg-block">
         <ul>
@@ -74,7 +74,7 @@
 <!--          <li><a href="#projects"> <span>Projects</span></a></li>-->
           <li><a href="#portfolio"> <span>Projects</span></a></li>
           <li><a href="#skills"> <span>Skills</span></a></li>
-          <li><a href="https://drive.google.com/file/d/1pT-Nk6AxY9ZOWBizuDb4htA3IiUF_fSe/view?usp=sharing" target="_blank"> <span>Resume</span></a></li>
+          <li><a href="https://drive.google.com/file/d/1qFb8-_guUQ0YRprjkh0I5YEUNyXoUPg3/view?usp=sharing" target="_blank"> <span>Resume</span></a></li>
           <!-- <li><a href="#links"> <span>Resume & Links</span></a></li> -->
           <li><a href="#contacts"> <span>Contact</span></a></li>
 
@@ -82,9 +82,9 @@
       </nav><!-- .nav-menu -->
 
       <div class="social-links">
-          <a href="https://www.linkedin.com/in/rajaprerak" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-          <a href="https://www.github.com/rajaprerak" target="_blank" class="github"><i class="bx bxl-github"></i></a>
-          <a href="mailto:rajaprerak@gmail.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
+          <a href="https://www.linkedin.com/in/dillanquinn" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.github.com/MarroquinDillan" target="_blank" class="github"><i class="bx bxl-github"></i></a>
+          <a href="mailto:di11marro@gmail.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
 
       </div>
 
@@ -142,49 +142,49 @@ My desire is to combine my teaching background with my experience in data and be
         <div class="col-lg-3 col-md-4">
           <div class="icon-box">
             <i class="ri-global-line" style="color: #ffbb2c;"></i>
-            <h3>Software Development</h3>
+            <h3>Data Analysis</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
             <i class="ri-database-2-line" style="color: #5578ff;"></i>
-            <h3>Machine Learning</h3>
+            <h3>Statistical Programming</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
             <i class="ri-camera-3-line" style="color: #e80368;"></i>
-            <h3>Computer Vision</h3>
+            <h3>Mathematical Software</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
           <div class="icon-box">
             <i class="ri-english-input" style="color: #1c7d32;"></i>
-            <h3>Natural Language Processing</h3>
+            <h3>STEM Education</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
             <i class="ri-code-s-slash-fill" style="color: #28a745;"></i>
-            <h3>Software Engineering</h3>
+            <h3>Data Entry</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
             <i class="ri-bar-chart-box-line" style="color: #f1081f;"></i>
-            <h3>Visualization</h3>
+            <h3>Data Visualization</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
             <i class="ri-file-list-3-line" style="color: #47aeff;"></i>
-            <h3>Algorithms</h3>
+            <h3>Fingerstyle Guitar</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
             <i class="ri-image-line" style="color: #ffc107;"></i>
-            <h3>Image Processing</h3>
+            <h3>Rock Climbing</h3>
           </div>
         </div>
       </div>
@@ -207,27 +207,27 @@ My desire is to combine my teaching background with my experience in data and be
             <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="padding:0px 0px;padding-bottom: 5px;display: inline-block;">
               <img src="assets/img/education/ASU.jpg" class="img-fluid" alt="">
               <!-- <h4 style="text-align:left;"><a href="https://www.asu.edu/" target="_blank" style="color:#12d640">Arizona State University</a><br> </h4> -->
-              <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>MS in Computer Science</em></p>
-              <h5 style="text-align:left;padding: 0px 10px;">Janurary 2021 - Present</h5>
+              <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>B.S. Discrete Mathematics</em></p>
+              <h5 style="text-align:left;padding: 0px 10px;">August 2019 - May 2022</h5>
               <h6 style="text-align:left;color:#fff;padding: 0px 10px;">Relevant Coursework</h6>
               <ul style="text-align:left;color:#fff;">
-                <li>Distributed Database Systems</li>
-                <li>Cloud Computing</li>
-                <li>Foundation Of Algorithms</li>
+                <li>STAT 461/462 - Intro to Probability Theory / Stochastic Processes</li>
+                <li>MATH 487 - Deterministic Operations Research</li>
+                <li>CS 135/202 - Computer Science I / II</li>
               </ul>
             </div>
             <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="padding:0px 0px;padding-bottom: 5px;display: inline-block;">
               <img src="assets/img/education/au.png" class="img-fluid" alt="">
               <!-- <h4 style="text-align:left;"><a href="https://ahduni.edu.in/" target="_blank" style="color:#12d640">Ahmedabad University</a><br> </h4> -->
-              <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>B.Tech. in Information and Communication Technology</em></p>
-              <h5 style="text-align:left;padding: 0px 10px;">July 2014 - May 2018</h5>
+              <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>B.S. Secondary Education</em></p>
+              <h5 style="text-align:left;padding: 0px 10px;">August 2019 - May 2022</h5>
               <h6 style="text-align:left;color:#fff;padding: 0px 10px;">Relevant Coursework</h6>
               <ul style="text-align:left;color:#fff;">
                 <!-- <li>Data Structures &amp; Algorithms</li> -->
-                <li>Database Management Systems</li>
+                <li>NVTC 303 - Research Methods</li>
                 <!-- <li>Operating Systems</li> -->
-                <li>Algorithms &amp; Optimization for Big Data</li>
-                <li>Machine Learning</li>
+                <li>NVTC 401 - Project Based Instruction</li>
+                <li>NVTC 201 - Knowing and Learning in Math and Science</li>
                 <!-- <li>Computer Vision</li> -->
               </ul>
             </div>
