--- a/index.html
+++ b/index.html
@@ -103,14 +103,12 @@
 
       <div class="row">
         <div class="col-lg-4" data-aos="fade-right">
-          <img src="assets/img/profile.jpeg" class="img-fluid" alt="">
+          <img src="assets/img/profile.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <p>Greetings! I am Dillan Marroquin, a Google Certified Data Analyst and current Data Entry Specialist.
-
-I am a former high school teacher having taught math and statistics for 3 years in WCSD and CCSD in Nevada. Due to my B.S. in Secondary Education and technical teaching background, I excel at breaking down complexity and communicating with simplicity. Additionally, my B.S. in Discrete Math and Statistics has trained me in various statistical software with my greatest tools being SQL and Spreadsheets for data cleaning, R for data analysis, and a touch of Tableau for visualization.
-
-My desire is to combine my teaching background with my experience in data and become a shining data analyst. I hope that my experience, skills, and above all my passion speak to you.
+          <p>Greetings! I am Dillan Marroquin, a Google Certified Data Analyst and current Data Entry Specialist. </br>
+          I am a former high school teacher having taught math and statistics for 3 years in WCSD and CCSD in Nevada. Due to my B.S. in Secondary Education and technical teaching background, I excel at breaking down complexity and communicating with simplicity. Additionally, my B.S. in Discrete Math and Statistics has trained me in various statistical software with my greatest tools being SQL and Spreadsheets for data cleaning, R for data analysis, and a touch of Tableau for visualization. </br>
+          My desire is to combine my teaching background with my experience in data and become a shining data analyst. I hope that my experience, skills, and above all my passion speak to you.
           </p>
           <div class="row">
             <div class="col-lg-6">
