--- a/index.html
+++ b/index.html
@@ -106,15 +106,15 @@
           <img src="assets/img/profile.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <p>Greetings! I am Dillan Marroquin, a Google Certified Data Analyst and current Data Entry Specialist. </br>
-          I am a former high school teacher having taught math and statistics for 3 years in WCSD and CCSD in Nevada. Due to my B.S. in Secondary Education and technical teaching background, I excel at breaking down complexity and communicating with simplicity. Additionally, my B.S. in Discrete Math and Statistics has trained me in various statistical software with my greatest tools being SQL and Spreadsheets for data cleaning, R for data analysis, and a touch of Tableau for visualization. </br>
+          <p>Greetings! I am Dillan Marroquin, a Google Certified Data Analyst and current Data Entry Specialist. </br> </br>
+          I am a former high school teacher having taught math and statistics for 3 years in WCSD and CCSD in Nevada. Due to my B.S. in Secondary Education and technical teaching background, I excel at breaking down complexity and communicating with simplicity. Additionally, my B.S. in Discrete Math and Statistics has trained me in various statistical software with my greatest tools being SQL and Spreadsheets for data cleaning, R for data analysis, and a touch of Tableau for visualization. </br> </br>
           My desire is to combine my teaching background with my experience in data and become a shining data analyst. I hope that my experience, skills, and above all my passion speak to you.
           </p>
           <div class="row">
             <div class="col-lg-6">
               <ul>
                 <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> November 27, 2000</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +1 (702) 339-5968 (Career inquiries only)</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +1 (702) 339-5968</br>(Career inquiries only)</li>
               </ul>
             </div>
             <div class="col-lg-6">
@@ -204,11 +204,12 @@
 
             <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="padding:0px 0px;padding-bottom: 5px;display: inline-block;">
               <img src="assets/img/education/ASU.jpg" class="img-fluid" alt="">
-              <!-- <h4 style="text-align:left;"><a href="https://www.asu.edu/" target="_blank" style="color:#12d640">Arizona State University</a><br> </h4> -->
+              <!-- <h4 style="text-align:left;"><a href="https://www.unr.edu/" target="_blank" style="color:#12d640">University of Nevada, Reno</a><br> </h4> -->
               <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>B.S. Discrete Mathematics</em></p>
               <h5 style="text-align:left;padding: 0px 10px;">August 2019 - May 2022</h5>
               <h6 style="text-align:left;color:#fff;padding: 0px 10px;">Relevant Coursework</h6>
               <ul style="text-align:left;color:#fff;">
+                <!-- Classes -->
                 <li>STAT 461/462 - Intro to Probability Theory / Stochastic Processes</li>
                 <li>MATH 487 - Deterministic Operations Research</li>
                 <li>CS 135/202 - Computer Science I / II</li>
@@ -221,12 +222,10 @@
               <h5 style="text-align:left;padding: 0px 10px;">August 2019 - May 2022</h5>
               <h6 style="text-align:left;color:#fff;padding: 0px 10px;">Relevant Coursework</h6>
               <ul style="text-align:left;color:#fff;">
-                <!-- <li>Data Structures &amp; Algorithms</li> -->
+                <!-- Classes -->
                 <li>NVTC 303 - Research Methods</li>
-                <!-- <li>Operating Systems</li> -->
                 <li>NVTC 401 - Project Based Instruction</li>
                 <li>NVTC 201 - Knowing and Learning in Math and Science</li>
-                <!-- <li>Computer Vision</li> -->
               </ul>
             </div>
           </div>
@@ -237,7 +236,7 @@
     <div class="portfolio">
     <div class="container">
       <div class="section-title">
-        <h2>Online Certification</h2>
+        <h2>Professional Certifications</h2>
       </div>
 
       <div class="row portfolio-container" style="position: relative; height: 437.75px;">
@@ -246,9 +245,9 @@
           <div class="portfolio-wrap">
             <img src="assets/img/certification/stanford.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Machine Learning</h4>
+              <h4>Google Certified Data Analytics Professional</h4>
               <div class="portfolio-links">
-                <a href="https://www.coursera.org/account/accomplishments/certificate/2BTJ636Q2E93?utm_medium=certificate&amp;utm_source=link&amp;utm_campaign=copybutton_certificate/" target="_blank" title="Certificate"><i class="bx bx-link"></i></a>
+                <a href="https://coursera.org/share/d69fa26f7d6b4fe99ae489e9431d49b6" target="_blank" title="Certificate"><i class="bx bx-link"></i></a>
               </div>
             </div>
            </div>
@@ -258,9 +257,9 @@
           <div class="portfolio-wrap">
             <img src="assets/img/certification/stanford.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Algorithms-Design and Analysis</h4>
+              <h4>IC3 Digital Literacy Certification</h4>
               <div class="portfolio-links">
-                <a href="https://www.coursera.org/account/accomplishments/certificate/6THRQXYE9EHZ?utm_medium=certificate&amp;utm_source=link&amp;utm_campaign=copybutton_certificate" target="_blank" title="Certificate"><i class="bx bx-link"></i></a>
+                <a href="https://certiport.pearsonvue.com/Certifications/IC3/Digital-Literacy-Certification/Overview.aspx" target="_blank" title="Certificate"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -270,9 +269,9 @@
           <div class="portfolio-wrap">
             <img src="assets/img/certification/ucsd.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Algorithmic Toolbox</h4>
+              <h4>Teaching Math with Technology Certification</h4>
               <div class="portfolio-links">
-                <a href="https://coursera.org/share/98bbfb990484fac370d5e5ed14334ea4" target="_blank" title="Certificate"><i class="bx bx-link"></i></a>
+                <a href="https://place.fi.ncsu.edu/local/catalog/course.php?id=10&ref=1" target="_blank" title="Certificate"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -282,34 +281,9 @@
           <div class="portfolio-wrap">
             <img src="assets/img/certification/ibm.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Deep Learning with Tensorflow</h4>
+              <h4>Secondary Teaching License - Math Endorsement</h4>
               <div class="portfolio-links">
-                <a href="https://drive.google.com/file/d/1FSwPt19EzY_tpvqkE6igtLf3gccKcssC/view?usp=sharing" target="_blank" title="Certificate"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-project" style="position: absolute; left: 370px; top: 218.875px;">
-          <div class="portfolio-wrap">
-            <img src="assets/img/certification/ibm.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Machine Learning with Python</h4>
-              <div class="portfolio-links">
-                <a href="https://drive.google.com/file/d/1gimySw_NPzCJ54dqZ2j2wYyz-JDOg-S0/view?usp=sharing" target="_blank" title="Certificate"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-project" style="position: absolute; left: 740px; top: 218.875px;">
-          <div class="portfolio-wrap">
-            <img src="assets/img/certification/dai.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Neural Networks and Deep Learning</h4>
-              <div class="portfolio-links">
-                <a href="https://www.coursera.org/account/accomplishments/certificate/ELXZ6FE2BU7X?utm_medium=certificate&amp;utm_source=link&amp;utm_campaign=copybutton_certificate/" target="_blank" title="Certificate"><i class="bx bx-link"></i></a>
+                <a href="https://drive.google.com/file/d/1ZLw4CS4q86tplxJldge0ME0tYkJUMqj2/view?usp=sharing" target="_blank" title="Certificate"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
