--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
             <div class="portfolio-info">
               <h4>IC3 Digital Literacy Certification</h4>
               <div class="portfolio-links">
-                <a href="https://certiport.pearsonvue.com/Certifications/IC3/Digital-Literacy-Certification/Overview.aspx" target="_blank" title="Certificate"><i class="bx bx-link"></i></a>
+                <a href="https://drive.google.com/file/d/1rQyxT3o5oW9vt0Z380e129Q9eRmrfAya/view?usp=sharing" target="_blank" title="Certificate"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -271,7 +271,7 @@
             <div class="portfolio-info">
               <h4>Teaching Math with Technology Certification</h4>
               <div class="portfolio-links">
-                <a href="https://place.fi.ncsu.edu/local/catalog/course.php?id=10&ref=1" target="_blank" title="Certificate"><i class="bx bx-link"></i></a>
+                <a href="https://drive.google.com/file/d/1ZEbWUBverlfSjWVGn5y_8rzIc7avXCjI/view?usp=sharing" target="_blank" title="Certificate"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -308,50 +308,52 @@
       <div class="row">
           <div class="col-lg-12" data-aos="fade-up">
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-                <h4 style="text-align:left;"><a href="https://www.asu.edu/" style="color:#12d640">Arizona State University</a><br> </h4>
-                <h5 style="text-align:left;">January 2021 - Present</h5>
-                <p style="text-align:left;color:#fff"><em>Software Engineer </em></p>
+                <h4 style="text-align:left;"><a href="https://www.infosys.com/" style="color:#12d640">Infosys BPM</a><br> </h4>
+                <h5 style="text-align:left;">January 2024 - April 2024</h5>
+                <p style="text-align:left;color:#fff"><em>Data Entry Specialist</em></p>
                 <ul style="text-align:left;">
-                  <li>Managed large‑scale deployment of JupyterHub with Nbgrader and webwork software, facilitating approx 5500 students.</li>
-                  <li>Configured, troubleshot, and administered server‑side web applications for the statistics department.</li>
-                  <li>Handled Linux server administration and Apache configuration; automated tasks like user account creation, managing student database, and system maintenance using Shell and automation scripts, reducing manual work by 200%.</li>
+                  <li>Analyzed large sets of customer data by validating and auditing Microsoft contracts.</li>
+                  <li>Validated contracts larger than $1 million for vendors such as SeaWorld and Coors Brewery.</li>
+                  <li>Exhibited expert knowledge of Microsoft Suite and utilized Excel for daily data entry.</li>
                 </ul>
               </div>
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-                <h4 style="text-align:left;"><a href="https://www.augmenify.com/" style="color:#12d640">Augmenify Infotech Pvt. Ltd.</a><br> </h4>
-                <h5 style="text-align:left;">August 2020 - November 2020</h5>
-                <p style="text-align:left;color:#fff"><em>Backend Developer</em></p>
+                <h4 style="text-align:left;"><a href="https://www.springvalleyhs.com/" style="color:#12d640">Spring Valley HS, Procter R. Hug HS</a><br> </h4>
+                <h5 style="text-align:left;">August 2021 - December 2023</h5>
+                <p style="text-align:left;color:#fff"><em>Math and Statistics Teacher</em></p>
                 <ul style="text-align:left;">
-                  <li>Documented and coded server‑less web application for the hotel industry and designed REST API using Flask‑based JWT authentication.</li>
-                  <li>Redeveloped an existing system to support customer account management, scheduling, and time tracking; enabled dynamic API calls with the help of Amazon API Gateway, AWS Lambda, and DynamoDB.</li>
+                  <li>Supervised classes of 30 students and trained them in Statistics, Algebra, and Geometry content.</li>
+                  <li>Visualized data insights via Excel pivot tables/charts and modeled the use of advanced formulas such as SUMIF and VLOOKUP to students.</li>
+                  <li>Implemented use of Excel sort and filter tools to streamline data entry of student metrics.</li>
                 </ul>
               </div>
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-                <h4 style="text-align:left;"><a href="https://www.epitomesolutions.in/" style="color:#12d640">Epitome Corporation Pvt. Ltd.</a><br> </h4>
-                <h5 style="text-align:left;">July 2019 - Dec 2019</h5>
-                <p style="text-align:left;color:#fff"><em>Software Developer</em></p>
+                <h4 style="text-align:left;"><a href="https://www.sierranevadajourneys.org/" style="color:#12d640">Sierra Nevada Journeys</a><br> </h4>
+                <h5 style="text-align:left;">June 2021 - August 2022</h5>
+                <p style="text-align:left;color:#fff"><em>STEM Night Coordinator (Intern)</em></p>
                 <ul style="text-align:left;">
-                  <li>Tested, designed, and developed backend APIs of WebRTC enabled multi‑party video conferencing web application and delivered the project 15 days ahead of schedule by efficiently designing the flow of the project.</li>
+                  <li>Coordinated with over 30 local schools across Washoe County to schedule, host, and present at events over 100 attendees large.</li>
+                  <li>Routinely validated thousand-dollar grants from multiple local investors using basic data-entry Excel functions.</li>
+                  <li>Managed groups of 5-10 volunteers to assist in the facilitation of STEM Nights.</li>
                 </ul>
               </div>
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-                <h4 style="text-align:left;"><a href="https://www.meditab.com/" target="_blank" style="color:#12d640">Meditab Software Pvt. Ltd.</a><br> </h4>
-                <h5 style="text-align:left;">May 2018 - June 2018</h5>
-                <p style="text-align:left;color:#fff"><em>Programmer Analyst</em></p>
+                <h4 style="text-align:left;"><a href="https://www.unr.edu" target="_blank" style="color:#12d640">University of Nevada, Reno</a><br> </h4>
+                <h5 style="text-align:left;">January 2021 - May 2021</h5>
+                <p style="text-align:left;color:#fff"><em>Teaching Assistant</em></p>
                 <ul style="text-align:left;">
-                  <li>Optimized image processing algorithm of pill detection by creating customized MASKRCNN  algorithm, increasing accuracy by 15%; trained classification algorithm with the help of triplet loss to learn the image embedding of pill, reducing the hassle of collecting data of new pills. </li>
-                  <li>Devised a pipeline of the project to incorporate it into the product of the company. Implemented Restful APIs in Django that enabled our quality Analyst team to increase reporting speed by 46%.</li>
-                  <li>Built a web app to onboard data from the company’s product using Flask, Postgres, and AWS S3, enabling interactive charts in real-time.</li>
-                  <li>Mentored 2 interns to optimize the pill detection algorithm and to include the multiprocessing pipeline, increasing overall speed by 75%.</li>
+                  <li>Taught virtual remediation sessions via Zoom to undergraduate MATH/STAT students in a MATH 310 Real Analysis course.</li>
+                  <li>Improved pass rates for this critical high fail rate math course by 15% during distance learning.</li>
                 </ul>
               </div>
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-                <h4 style="text-align:left;"><a href="https://www.sac.gov.in/Vyom/index.jsp" target="_blank" style="color:#12d640">Space Application Centre, ISRO</a><br> </h4>
-                <h5 style="text-align:left;">Jan 2018 - May 2018</h5>
-                <p style="text-align:left;color:#fff"><em>Research Intern</em></p>
+                <h4 style="text-align:left;"><a href="https://www.mathnasium.com/" target="_blank" style="color:#12d640">Mathnasium - The Math Learning Center</a><br> </h4>
+                <h5 style="text-align:left;">September 2018 - December 2020</h5>
+                <p style="text-align:left;color:#fff"><em>Lead Instructor</em></p>
                 <ul style="text-align:left;">
-                  <li>Implemented noise reduction algorithm on the satellite image and prepared architecture for detecting objects in high‑resolution satellite images, achieving 80% accuracy.</li>
-                  <li>Increased accessibility of satellite image data by redesigning database and application for showcasing graphical data.</li>
+                  <li>Spearheaded team meetings reviewing agenda items aimed to improve team collaboration and student retention rates.</li>
+                  <li>Specialized in teaching Statistics and Computer Science for advanced learners.</li>
+                  <li>Awarded 3 “Instructor of the Month” awards due to excellence in instruction</li>
                 </ul>
             </div>
           </div>
