--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
       <div class="row portfolio-container">
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-          <center><h4>Twitter Analysis</h4></center>
+          <center><h4>2020 Presidential Election Voter Fraud Analysis</h4></center>
           <div class="portfolio-wrap">
             <img src="assets/img/project/twitteranalysis.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
@@ -399,7 +399,7 @@
         </div>
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-          <center><h4>Image recognition as Service</h4></center>
+          <center><h4>Math Professor Bookshelves Cluster Analysis</h4></center>
           <div class="portfolio-wrap">
             <img src="assets/img/project/iras.jpeg" class="img-fluid" alt="">
             <div class="portfolio-info">
@@ -412,7 +412,7 @@
         </div>
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-          <center><h4>Music Streaming Website</h4></center>
+          <center><h4>MATH/STAT Undergraduate Typeset Lecture Notes Portfolio</h4></center>
           <div class="portfolio-wrap">
             <img src="assets/img/project/musicplayer.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
@@ -425,7 +425,7 @@
         </div>
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-          <center><h4>Movie Recommender</h4></center>
+          <center><h4>Coursera Data Analytics Practice with R, SQL, and Spreadsheets</h4></center>
           <div class="portfolio-wrap">
             <img src="assets/img/project/recommender.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
@@ -451,7 +451,7 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-project">
           <!-- <br> -->
-          <center><h4>Resume Section Classifier</h4></center>
+          <center><h4>Algebra class of 2021 Performance Analysis</h4></center>
           <div class="portfolio-wrap">
             <img src="assets/img/project/resume.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
@@ -477,7 +477,7 @@
         </div> -->
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-project">
-          <center><h4>Video Description Generator</h4></center>
+          <center><h4>Expert-level Rock Climber Strength Analysis (in development!)</h4></center>
           <div class="portfolio-wrap">
             <img src="assets/img/project/vdg.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
@@ -489,27 +489,12 @@
         </div>
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-          <center><h4>ML-DL Web-App</h4></center>
+          <center><h4>Music Streaming Services Preference and Retention Rates Analysis (in development!)</h4></center>
           <div class="portfolio-wrap">
             <img src="assets/img/project/ml.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <div class="portfolio-links">
                 <a href="projects/ml.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Project Details"><i class="bx bx-info-circle"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-project">
-          <!-- <br> -->
-          <center><h4>Image Generator</h4></center>
-          <div class="portfolio-wrap">
-            <img src="assets/img/project/gan.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <div class="portfolio-links">
-                <a href="projects/gan.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Project Details"><i class="bx bx-info-circle"></i></a>
               </div>
             </div>
           </div>
@@ -533,7 +518,7 @@
       <div class="row">
         <div class="col-lg-12" data-aos="fade-up">
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="background:#fff">
-            <h4 style="text-align:left;color:#09203a">Languages and Databases</h4>
+            <h4 style="text-align:left;color:#09203a">Professional and Technical Skills</h4>
                 <p style="text-align:left;">
                   <img src="https://www.vectorlogo.zone/logos/python/python-horizontal.svg" alt="vectorlogo.zone" height="50" width="150">
                   <img src="https://www.vectorlogo.zone/logos/java/java-horizontal.svg" alt="vectorlogo.zone" height="50" width="120">
@@ -545,20 +530,16 @@
                 </p>
             </div>
             <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="lefade-up" data-aos-delay="100" style="background:#fff">
-              <h4 style="text-align:left;color:#09203a">Frameworks</h4>
+              <h4 style="text-align:left;color:#09203a">Soft Skills</h4>
                 <p style="text-align:left;">
-                  <img src="https://www.vectorlogo.zone/logos/pocoo_flask/pocoo_flask-ar21.svg" alt="vectorlogo.zone">
-                  <img src="https://www.vectorlogo.zone/logos/djangoproject/djangoproject-ar21.svg" alt="vectorlogo.zone">
-                  <img src="https://www.vectorlogo.zone/logos/nodejs/nodejs-horizontal.svg" alt="vectorlogo.zone">
-                  <img src="https://www.vectorlogo.zone/logos/getbootstrap/getbootstrap-ar21.svg" alt="vectorlogo.zone">
-                  <img src="https://www.vectorlogo.zone/logos/tensorflow/tensorflow-ar21.svg" alt="vectorlogo.zone">
-                  <img src="https://www.vectorlogo.zone/logos/pytorch/pytorch-ar21.svg" alt="vectorlogo.zone">
-                  <img src="https://www.vectorlogo.zone/logos/opencv/opencv-ar21.svg" alt="vectorlogo.zone">
+                  <img src="https://www.vectorlogo.zone/logos/r-project/r-project-icon.svg" alt="vectorlogo.zone">
+                  <img src="https://www.vectorlogo.zone/logos/mysql/mysql-horizontal.svg" alt="vectorlogo.zone">
+                  <img src="https://upload.vectorlogo.zone/logos/tableau/images/113a311a-6d5d-4b7e-9193-79807e4844e3.svg" alt="vectorlogo.zone">
                   <img src="https://upload.wikimedia.org/wikipedia/commons/0/05/Scikit_learn_logo_small.svg" alt="upload.wikimedia.org" width="90" height="70">
               </p>
           </div>
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="lefade-up" data-aos-delay="100" style="background:#fff">
-              <h4 style="text-align:left;color:#09203a">Tools</h4>
+              <h4 style="text-align:left;color:#09203a">Recreational Stress-Relieving Skills!</h4>
                 <p style="text-align:left;">
                   <img src="https://www.vectorlogo.zone/logos/git-scm/git-scm-ar21.svg" alt="vectorlogo.zone">
                   <img src="https://www.vectorlogo.zone/logos/amazon_aws/amazon_aws-ar21.svg" alt="vectorlogo.zone">
