--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
         </div> -->
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-project">
-          <center><h4>Expert-level Rock Climber Strength Analysis (in development!)</h4></center>
+          <center><h4>World-Class Rock Climber Strength Analysis (in development!)</h4></center>
           <div class="portfolio-wrap">
             <img src="assets/img/project/vdg.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
@@ -520,13 +520,11 @@
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="background:#fff">
             <h4 style="text-align:left;color:#09203a">Professional and Technical Skills</h4>
                 <p style="text-align:left;">
-                  <img src="https://www.vectorlogo.zone/logos/python/python-horizontal.svg" alt="vectorlogo.zone" height="50" width="150">
-                  <img src="https://www.vectorlogo.zone/logos/java/java-horizontal.svg" alt="vectorlogo.zone" height="50" width="120">
+                  <img src="https://www.vectorlogo.zone/logos/r-project/r-project-icon.svg" alt="vectorlogo.zone" height="50" width="150">
+                  <img src="https://www.vectorlogo.zone/logos/mysql/mysql-horizontal.svg" alt="vectorlogo.zone" height="50" width="120">
                   <img src="https://www.vectorlogo.zone/logos/w3_html5/w3_html5-ar21.svg" alt="vectorlogo.zone">
-                  <img src="https://upload.wikimedia.org/wikipedia/commons/d/d5/CSS3_logo_and_wordmark.svg" alt="upload.wikimedia.org" height="60" width="90">
-                  <img src="https://www.vectorlogo.zone/logos/mysql/mysql-horizontal.svg" alt="vectorlogo.zone" height="70" width="130">
-                  <img src="https://www.vectorlogo.zone/logos/postgresql/postgresql-horizontal.svg" alt="vectorlogo.zone" height="50" width="190">
-
+                  <img src="https://upload.wikimedia.org/wikipedia/commons/9/92/LaTeX_logo.svg" alt="upload.wikimedia.org" height="60" width="90">
+                  <img src="https://raw.githubusercontent.com/gilbarbara/logos/main/logos/tableau.svg" alt="vectorlogo.zone" height="50" width="190">
                 </p>
             </div>
             <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="lefade-up" data-aos-delay="100" style="background:#fff">
@@ -539,13 +537,12 @@
               </p>
           </div>
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="lefade-up" data-aos-delay="100" style="background:#fff">
-              <h4 style="text-align:left;color:#09203a">Recreational Stress-Relieving Skills!</h4>
+              <h4 style="text-align:left;color:#09203a">Recreational Stress-Relievers!</h4>
                 <p style="text-align:left;">
-                  <img src="https://www.vectorlogo.zone/logos/git-scm/git-scm-ar21.svg" alt="vectorlogo.zone">
-                  <img src="https://www.vectorlogo.zone/logos/amazon_aws/amazon_aws-ar21.svg" alt="vectorlogo.zone">
-                  <img src="https://www.vectorlogo.zone/logos/google_cloud/google_cloud-ar21.svg" alt="vectorlogo.zone">
-                  <img src="https://www.vectorlogo.zone/logos/heroku/heroku-ar21.svg" alt="vectorlogo.zone">
-                  <img src="https://www.vectorlogo.zone/logos/jupyter/jupyter-ar21.svg" alt="vectorlogo.zone">
+                  <img src="https://cdn.pixabay.com/photo/2015/05/07/11/02/guitar-756326_1280.jpg" alt="pixabay.com">
+                  <img src="https://cdn.pixabay.com/photo/2014/03/26/21/00/climber-299018_640.jpg" alt="pixabay.com">
+                  <img src="https://cdn.pixabay.com/photo/2017/10/28/14/56/street-2897229_640.png" alt="pixabay.com">
+                  <img src="https://cdn.pixabay.com/photo/2016/11/22/19/25/man-1850181_640.jpg" alt="pixabay.com">
               </p>
           </div>
         </div>
