--- a/index.html
+++ b/index.html
@@ -597,9 +597,7 @@
           <div class="info-box">
             <i class="bx bx-map"></i>
             <h3>My Address</h3>
-            <p>1275 E University Dr</p>
-            <p>Unit 212</p>
-            <p>Tempe, AZ 85281</p>
+            <p>Sparks, NV 89431</p>
           </div>
         </div>
 
@@ -608,9 +606,9 @@
             <i class="bx bx-share-alt"></i>
             <h3>Social Profiles</h3>
             <div class="social-links">
-              <a href="https://www.linkedin.com/in/rajaprerak" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-              <a href="https://www.github.com/rajaprerak" target="_blank" class="github"><i class="bx bxl-github"></i></a>
-              <a href="mailto:rajaprerak@gmail.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
+              <a href="https://www.linkedin.com/in/DillanQuinn" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+              <a href="https://www.github.com/MarroquinDillan" target="_blank" class="github"><i class="bx bxl-github"></i></a>
+              <a href="mailto:di11marro@gmail.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
 
             </div>
           </div>
@@ -620,15 +618,14 @@
           <div class="info-box">
             <i class="bx bx-envelope"></i>
             <h3>Email</h3>
-            <p>rajaprerak@gmail.com</p>
-            <p>pkraja@asu.edu</p>
+            <p>di11marro@gmail.com (Career Inquiries Only)</p>
           </div>
         </div>
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-phone-call"></i>
             <h3>Contact</h3>
-            <p>+1 480-401-8112</p>
+            <p>+1 (702) 339-5968 (Career Inquiries Only)</p>
           </div>
         </div>
       </div>
@@ -651,7 +648,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Coder", "Developer", "AI Enthusiast"],
+      strings: ["Certified Data Analyst", "Amateur Statistician", "STEM Education Advocate"],
       loop: true,
       typeSpeed: 65,
       backSpeed: 65
