--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> November 27, 2000</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +1 (702) 339-5968</br>(Career inquiries only)</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +1 (702) 339-5968</li>
               </ul>
             </div>
             <div class="col-lg-6">
