--- a/index.html
+++ b/index.html
@@ -203,20 +203,20 @@
 
 
             <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="padding:0px 0px;padding-bottom: 5px;display: inline-block;">
-              <img src="assets/img/education/ASU.jpg" class="img-fluid" alt="">
+              <img src="assets/img/education/unr.jpg" class="img-fluid" alt="">
               <!-- <h4 style="text-align:left;"><a href="https://www.unr.edu/" target="_blank" style="color:#12d640">University of Nevada, Reno</a><br> </h4> -->
               <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>B.S. Discrete Mathematics</em></p>
               <h5 style="text-align:left;padding: 0px 10px;">August 2019 - May 2022</h5>
               <h6 style="text-align:left;color:#fff;padding: 0px 10px;">Relevant Coursework</h6>
               <ul style="text-align:left;color:#fff;">
                 <!-- Classes -->
-                <li>STAT 461/462 - Intro to Probability Theory / Stochastic Processes</li>
+                <li>STAT 461/462 - Intro to Probability Theory/Stochastic Processes</li>
                 <li>MATH 487 - Deterministic Operations Research</li>
-                <li>CS 135/202 - Computer Science I / II</li>
+                <li>CS 135/202 - Computer Science I/II</li>
               </ul>
             </div>
             <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="padding:0px 0px;padding-bottom: 5px;display: inline-block;">
-              <img src="assets/img/education/au.png" class="img-fluid" alt="">
+              <img src="assets/img/education/unr.jpg" class="img-fluid" alt="">
               <!-- <h4 style="text-align:left;"><a href="https://ahduni.edu.in/" target="_blank" style="color:#12d640">Ahmedabad University</a><br> </h4> -->
               <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>B.S. Secondary Education</em></p>
               <h5 style="text-align:left;padding: 0px 10px;">August 2019 - May 2022</h5>
@@ -228,6 +228,20 @@
                 <li>NVTC 201 - Knowing and Learning in Math and Science</li>
               </ul>
             </div>
+
+            <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="padding:0px 0px;padding-bottom: 5px;display: inline-block;">
+              <img src="assets/img/education/csn.jpg" class="img-fluid" alt="">
+              <!-- <h4 style="text-align:left;"><a href="https://www.unr.edu/" target="_blank" style="color:#12d640">University of Nevada, Reno</a><br> </h4> -->
+              <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>A.A. General Studies</em></p>
+              <h5 style="text-align:left;padding: 0px 10px;">August 2017 - May 2019</h5>
+              <h6 style="text-align:left;color:#fff;padding: 0px 10px;">Relevant Coursework</h6>
+              <ul style="text-align:left;color:#fff;">
+                <!-- Classes -->
+                <li>IS 101 - Intro to Information Systems</li>
+                <li>MATH 126/127 - Precalculus I/II</li>
+              </ul>
+            </div>
+          
           </div>
         </div>
       </div>
