--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 
          <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="position: absolute; left: 0px; top: 0px;">
           <div class="portfolio-wrap">
-            <img src="assets/img/certification/stanford.jpg" class="img-fluid" alt="">
+            <img src="assets/img/certification/google.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Google Certified Data Analytics Professional</h4>
               <div class="portfolio-links">
@@ -269,7 +269,7 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="position: absolute; left: 370px; top: 0px;">
           <div class="portfolio-wrap">
-            <img src="assets/img/certification/stanford.jpg" class="img-fluid" alt="">
+            <img src="assets/img/certification/certiport.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>IC3 Digital Literacy Certification</h4>
               <div class="portfolio-links">
@@ -281,7 +281,7 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="position: absolute; left: 740px; top: 0px;">
           <div class="portfolio-wrap">
-            <img src="assets/img/certification/ucsd.jpg" class="img-fluid" alt="">
+            <img src="assets/img/certification/friday institute.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Teaching Math with Technology Certification</h4>
               <div class="portfolio-links">
@@ -293,7 +293,7 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-project" style="position: absolute; left: 0px; top: 218.875px;">
           <div class="portfolio-wrap">
-            <img src="assets/img/certification/ibm.jpg" class="img-fluid" alt="">
+            <img src="assets/img/certification/nvdoe.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Secondary Teaching License - Math Endorsement</h4>
               <div class="portfolio-links">
