--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Sparks, NV</li>
+                <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Sparks, NV 89431</li>
                 <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> di11marro@gmail.com</li>
               </ul>
             </div>
@@ -632,14 +632,14 @@
           <div class="info-box">
             <i class="bx bx-envelope"></i>
             <h3>Email</h3>
-            <p>di11marro@gmail.com (Career Inquiries Only)</p>
+            <p>di11marro@gmail.com <em>(Career Inquiries Only)</em></p>
           </div>
         </div>
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-phone-call"></i>
             <h3>Contact</h3>
-            <p>+1 (702) 339-5968 (Career Inquiries Only)</p>
+            <p>+1 (702) 339-5968 <em>(Career Inquiries Only)</em></p>
           </div>
         </div>
       </div>
@@ -662,10 +662,10 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Certified Data Analyst", "Amateur Statistician", "STEM Education Advocate"],
+      strings: ["Certified Data Analyst", "Former Math and Statistics Teacher", "Fingerstyle Guitarist", "Amateur Statistician", "Rock Climber", "STEM Education Advocate"],
       loop: true,
-      typeSpeed: 65,
-      backSpeed: 65
+      typeSpeed: 75,
+      backSpeed: 75
     });
   </script>
 
