--- a/index.html
+++ b/index.html
@@ -544,10 +544,9 @@
             <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="lefade-up" data-aos-delay="100" style="background:#fff">
               <h4 style="text-align:left;color:#09203a">Soft Skills</h4>
                 <p style="text-align:left;">
-                  <img src="https://www.vectorlogo.zone/logos/r-project/r-project-icon.svg" alt="vectorlogo.zone">
-                  <img src="https://www.vectorlogo.zone/logos/mysql/mysql-horizontal.svg" alt="vectorlogo.zone">
-                  <img src="https://upload.vectorlogo.zone/logos/tableau/images/113a311a-6d5d-4b7e-9193-79807e4844e3.svg" alt="vectorlogo.zone">
-                  <img src="https://upload.wikimedia.org/wikipedia/commons/0/05/Scikit_learn_logo_small.svg" alt="upload.wikimedia.org" width="90" height="70">
+                  <li>Analyzed large sets of customer data by validating and auditing Microsoft contracts.</li>
+                  <li>Validated contracts larger than $1 million for vendors such as SeaWorld and Coors Brewery.</li>
+                  <li>Exhibited expert knowledge of Microsoft Suite and utilized Excel for daily data entry.</li>
               </p>
           </div>
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="lefade-up" data-aos-delay="100" style="background:#fff">
