--- a/index.html
+++ b/index.html
@@ -544,11 +544,13 @@
             <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="lefade-up" data-aos-delay="100" style="background:#fff">
               <h4 style="text-align:left;color:#09203a">Soft Skills</h4>
                 <p style="text-align:left;">
-                  <li>Analyzed large sets of customer data by validating and auditing Microsoft contracts.</li>
-                  <li>Validated contracts larger than $1 million for vendors such as SeaWorld and Coors Brewery.</li>
-                  <li>Exhibited expert knowledge of Microsoft Suite and utilized Excel for daily data entry.</li>
-              </p>
-          </div>
+                  <ul style="text-align:left;">
+                    <li>Analyzed large sets of customer data by validating and auditing Microsoft contracts.</li>
+                    <li>Validated contracts larger than $1 million for vendors such as SeaWorld and Coors Brewery.</li>
+                    <li>Exhibited expert knowledge of Microsoft Suite and utilized Excel for daily data entry.</li>
+                  </ul>
+                </p>
+            </div>
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="lefade-up" data-aos-delay="100" style="background:#fff">
               <h4 style="text-align:left;color:#09203a">Recreational Stress-Relievers!</h4>
                 <p style="text-align:left;">
