--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Sparks, NV 89431</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Address:</strong> Sparks, NV 89431</li>
                 <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> di11marro@gmail.com</li>
               </ul>
             </div>
@@ -544,7 +544,7 @@
             <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="lefade-up" data-aos-delay="100" style="background:#fff">
               <h4 style="text-align:left;color:#09203a">Soft Skills</h4>
                 <p style="text-align:left;">
-                  <ul style="text-align:left;">
+                  <ul style="text-align:left; color:#000000">
                     <li>Analyzed large sets of customer data by validating and auditing Microsoft contracts.</li>
                     <li>Validated contracts larger than $1 million for vendors such as SeaWorld and Coors Brewery.</li>
                     <li>Exhibited expert knowledge of Microsoft Suite and utilized Excel for daily data entry.</li>
