--- a/index.html
+++ b/index.html
@@ -534,30 +534,31 @@
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="background:#fff">
             <h4 style="text-align:left;color:#09203a">Professional and Technical Skills</h4>
                 <p style="text-align:left;">
-                  <img src="https://www.vectorlogo.zone/logos/r-project/r-project-icon.svg" alt="vectorlogo.zone">
+                  <img src="https://www.vectorlogo.zone/logos/r-project/r-project-icon.svg" alt="vectorlogo.zone" height="50" width="120">
                   <img src="https://www.vectorlogo.zone/logos/mysql/mysql-horizontal.svg" alt="vectorlogo.zone" height="50" width="120">
-                  <img src="https://www.vectorlogo.zone/logos/w3_html5/w3_html5-ar21.svg" alt="vectorlogo.zone">
-                  <img src="https://upload.wikimedia.org/wikipedia/commons/9/92/LaTeX_logo.svg" alt="upload.wikimedia.org">
-                  <img src="https://raw.githubusercontent.com/gilbarbara/logos/main/logos/tableau.svg" alt="vectorlogo.zone">
+                  <img src="https://www.vectorlogo.zone/logos/w3_html5/w3_html5-ar21.svg" alt="vectorlogo.zone" height="50" width="120">
+                  <img src="https://upload.wikimedia.org/wikipedia/commons/9/92/LaTeX_logo.svg" alt="upload.wikimedia.org" height="50" width="120">
+                  <img src="https://raw.githubusercontent.com/gilbarbara/logos/main/logos/tableau.svg" alt="vectorlogo.zone" height="50" width="120">
                 </p>
             </div>
             <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="lefade-up" data-aos-delay="100" style="background:#fff">
               <h4 style="text-align:left;color:#09203a">Soft Skills</h4>
                 <p style="text-align:left;">
                   <ul style="text-align:left; color:#000000">
-                    <li>Analyzed large sets of customer data by validating and auditing Microsoft contracts.</li>
-                    <li>Validated contracts larger than $1 million for vendors such as SeaWorld and Coors Brewery.</li>
-                    <li>Exhibited expert knowledge of Microsoft Suite and utilized Excel for daily data entry.</li>
+                    <li>Critical-Thinking and Attention to Detail </li>
+                    <li>Project and Time Management </li>
+                    <li>Communicating and Teaching </li>
+                    <li>Leadership and Adaptability</li>
                   </ul>
                 </p>
             </div>
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="lefade-up" data-aos-delay="100" style="background:#fff">
               <h4 style="text-align:left;color:#09203a">Recreational Stress-Relievers!</h4>
                 <p style="text-align:left;">
-                  <img src="https://cdn.pixabay.com/photo/2015/05/07/11/02/guitar-756326_1280.jpg" alt="pixabay.com">
-                  <img src="https://cdn.pixabay.com/photo/2014/03/26/21/00/climber-299018_640.jpg" alt="pixabay.com">
-                  <img src="https://cdn.pixabay.com/photo/2017/10/28/14/56/street-2897229_640.png" alt="pixabay.com">
-                  <img src="https://cdn.pixabay.com/photo/2016/11/22/19/25/man-1850181_640.jpg" alt="pixabay.com">
+                  <img src="https://cdn.pixabay.com/photo/2015/05/07/11/02/guitar-756326_1280.jpg" alt="pixabay.com" height="50" width="120">
+                  <img src="https://cdn.pixabay.com/photo/2014/03/26/21/00/climber-299018_640.jpg" alt="pixabay.com" height="50" width="120">
+                  <img src="https://cdn.pixabay.com/photo/2017/10/28/14/56/street-2897229_640.png" alt="pixabay.com" height="50" width="120">
+                  <img src="https://cdn.pixabay.com/photo/2016/11/22/19/25/man-1850181_640.jpg" alt="pixabay.com" height="50" width="120">
               </p>
           </div>
         </div>
