--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
                 </p>
             </div>
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="lefade-up" data-aos-delay="100" style="background:#fff">
-              <h4 style="text-align:left;color:#09203a">Recreational Stress-Relievers!</h4>
+              <h4 style="text-align:left;color:#09203a">Recreational Skills!</h4>
                 <p style="text-align:left;">
                   <img src="https://cdn.pixabay.com/photo/2015/05/07/11/02/guitar-756326_1280.jpg" alt="pixabay.com" height="200" width="200">
                   <img src="https://cdn.pixabay.com/photo/2014/03/26/21/00/climber-299018_640.jpg" alt="pixabay.com" height="200" width="200">
@@ -667,7 +667,7 @@
       strings: ["Certified Data Analyst", "Former Math and Statistics Teacher", "Fingerstyle Guitarist", "Amateur Statistician", "Rock Climber", "STEM Education Advocate"],
       loop: true,
       typeSpeed: 75,
-      backSpeed: 75
+      backSpeed: 100
     });
   </script>
 
