--- a/index.html
+++ b/index.html
@@ -534,11 +534,12 @@
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="background:#fff">
             <h4 style="text-align:left;color:#09203a">Professional and Technical Skills</h4>
                 <p style="text-align:left;">
-                  <img src="https://www.vectorlogo.zone/logos/r-project/r-project-icon.svg" alt="vectorlogo.zone" height="50" width="120">
-                  <img src="https://www.vectorlogo.zone/logos/mysql/mysql-horizontal.svg" alt="vectorlogo.zone" height="50" width="120">
-                  <img src="https://www.vectorlogo.zone/logos/w3_html5/w3_html5-ar21.svg" alt="vectorlogo.zone" height="50" width="120">
-                  <img src="https://upload.wikimedia.org/wikipedia/commons/9/92/LaTeX_logo.svg" alt="upload.wikimedia.org" height="50" width="120">
-                  <img src="https://raw.githubusercontent.com/gilbarbara/logos/main/logos/tableau.svg" alt="vectorlogo.zone" height="50" width="120">
+                  <img src="https://www.vectorlogo.zone/logos/r-project/r-project-icon.svg" alt="vectorlogo.zone" height=
+                    "75" width="120">
+                  <img src="https://www.vectorlogo.zone/logos/mysql/mysql-horizontal.svg" alt="vectorlogo.zone" height="75" width="120">
+                  <img src="https://www.vectorlogo.zone/logos/w3_html5/w3_html5-ar21.svg" alt="vectorlogo.zone" height="75" width="120">
+                  <img src="https://upload.wikimedia.org/wikipedia/commons/9/92/LaTeX_logo.svg" alt="upload.wikimedia.org" height="75" width="120">
+                  <img src="https://raw.githubusercontent.com/gilbarbara/logos/main/logos/tableau.svg" alt="vectorlogo.zone" height="75" width="120">
                 </p>
             </div>
             <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="lefade-up" data-aos-delay="100" style="background:#fff">
