--- a/index.html
+++ b/index.html
@@ -391,15 +391,18 @@
         <div class="col-lg-12 d-flex justify-content-center">
           <ul id="portfolio-flters">
             <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-app">Web-App</li>
-            <li data-filter=".filter-project">Project</li>
+            <li data-filter=".filter-r">R</li>
+            <li data-filter=".filter-python">:ython</li>
+            <li data-filter=".filter-sql">SQL</li>
+            <li data-filter=".filter-tex">TeX</li>
+            <li data-filter=".filter-spreadsheets">Spreadsheets</li>
           </ul>
         </div>
       </div>
 
       <div class="row portfolio-container">
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-r">
           <center><h4>2020 Presidential Election Voter Fraud Analysis</h4></center>
           <div class="portfolio-wrap">
             <img src="assets/img/project/twitteranalysis.jpg" class="img-fluid" alt="">
@@ -412,7 +415,7 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-r filter-spreadsheets">
           <center><h4>Math Professor Bookshelves Cluster Analysis</h4></center>
           <div class="portfolio-wrap">
             <img src="assets/img/project/iras.jpeg" class="img-fluid" alt="">
@@ -425,7 +428,7 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-tex">
           <center><h4>MATH/STAT Undergraduate Typeset Lecture Notes Portfolio</h4></center>
           <div class="portfolio-wrap">
             <img src="assets/img/project/musicplayer.jpg" class="img-fluid" alt="">
@@ -438,7 +441,7 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-r filter-sql filter-spreadsheets">
           <center><h4>Coursera Data Analytics Practice with R, SQL, and Spreadsheets</h4></center>
           <div class="portfolio-wrap">
             <img src="assets/img/project/recommender.jpg" class="img-fluid" alt="">
@@ -463,7 +466,7 @@
           </div>
         </div> -->
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-project">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-spreadsheets">
           <!-- <br> -->
           <center><h4>Algebra class of 2021 Performance Analysis</h4></center>
           <div class="portfolio-wrap">
@@ -490,7 +493,7 @@
           </div>
         </div> -->
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-project">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-sql">
           <center><h4>World-Class Rock Climber Strength Analysis (in development!)</h4></center>
           <div class="portfolio-wrap">
             <img src="assets/img/project/vdg.jpg" class="img-fluid" alt="">
@@ -502,7 +505,7 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-sql">
           <center><h4>Music Streaming Services Preference and Retention Rates Analysis (in development!)</h4></center>
           <div class="portfolio-wrap">
             <img src="assets/img/project/ml.jpg" class="img-fluid" alt="">
