--- a/index.html
+++ b/index.html
@@ -392,10 +392,11 @@
           <ul id="portfolio-flters">
             <li data-filter="*" class="filter-active">All</li>
             <li data-filter=".filter-r">R</li>
-            <li data-filter=".filter-python">:ython</li>
+            <li data-filter=".filter-python">:Python</li>
             <li data-filter=".filter-sql">SQL</li>
             <li data-filter=".filter-tex">TeX</li>
             <li data-filter=".filter-spreadsheets">Spreadsheets</li>
+            <li data-filter=".filter-indevelopment">In Development</li>
           </ul>
         </div>
       </div>
@@ -493,8 +494,8 @@
           </div>
         </div> -->
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-sql">
-          <center><h4>World-Class Rock Climber Strength Analysis (in development!)</h4></center>
+        <div class="col-lg-4 col-md-6 portfolio-item filter-indevelopment filter-python">
+          <center><h4>World-Class Rock Climber Strength Analysis</h4></center>
           <div class="portfolio-wrap">
             <img src="assets/img/project/vdg.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
@@ -505,7 +506,7 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-sql">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-indevelopment filter-sql">
           <center><h4>Music Streaming Services Preference and Retention Rates Analysis (in development!)</h4></center>
           <div class="portfolio-wrap">
             <img src="assets/img/project/ml.jpg" class="img-fluid" alt="">
