--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
           <ul id="portfolio-flters">
             <li data-filter="*" class="filter-active">All</li>
             <li data-filter=".filter-r">R</li>
-            <li data-filter=".filter-python">:Python</li>
+            <li data-filter=".filter-python">Python</li>
             <li data-filter=".filter-sql">SQL</li>
             <li data-filter=".filter-tex">TeX</li>
             <li data-filter=".filter-spreadsheets">Spreadsheets</li>
