--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Welcome! | Dillan Marroquin</title>
+  <title>Personal Portfolio</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -70,7 +70,7 @@
 <!--          <li><a href="#projects"> <span>Projects</span></a></li>-->
           <li><a href="#portfolio"> <span>Projects</span></a></li>
           <li><a href="#skills"> <span>Skills</span></a></li>
-          <li><a href="https://drive.google.com/file/d/1-4joXcCmPcPpeMyJ49YL98_8VY1VtKj0/view?usp=sharing" target="_blank"> <span>Resume</span></a></li>
+          <li><a href="https://drive.google.com/file/d/12CGaxAJTuykQL0dAFxYEQDab_8P3FmLA/view?usp=sharing" target="_blank"> <span>Resume</span></a></li>
           <!-- <li><a href="#links"> <span>Resume & Links</span></a></li> -->
           <li><a href="#contacts"> <span>Contact</span></a></li>
 
@@ -610,14 +610,14 @@
       </div>
       <div class="row">
         <div class="col-md-3 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-          <a href="https://drive.google.com/file/d/1-4joXcCmPcPpeMyJ49YL98_8VY1VtKj0/view?usp=sharing" target="_blank"><div class="icon"><i class="icofont-page"></i></div></a>
-          <h4 class="title"><a href="https://drive.google.com/file/d/1-4joXcCmPcPpeMyJ49YL98_8VY1VtKj0/view?usp=sharing" target="_blank">Resume</a></h4>
+          <a href="https://drive.google.com/file/d/12CGaxAJTuykQL0dAFxYEQDab_8P3FmLA/view?usp=sharing" target="_blank"><div class="icon"><i class="icofont-page"></i></div></a>
+          <h4 class="title"><a href="https://drive.google.com/file/d/12CGaxAJTuykQL0dAFxYEQDab_8P3FmLA/view?usp=sharing" target="_blank">Resume</a></h4>
           <p class="description" style="color:#fff;">The link contains downloadable resume</p>
         </div>
         <div class="col-md-3 mt-4 mt-md-0 icon-box" data-aos="fade-up">
-          <a href="https://github.com/rajaprerak/LeetCode_Problems" target="_blank"><div class="icon"><i class="icofont-link"></i></div></a>
-          <h4 class="title"><a href="https://github.com/rajaprerak/LeetCode_Problems" target="_blank">LeetCode Repository</a></h4>
-          <p class="description" style="color:#fff;"> The github repository contains leetcode problems solution in python.</p>
+          <a href="https://github.com/rajaprerak/MarroquinDillan" target="_blank"><div class="icon"><i class="icofont-link"></i></div></a>
+          <h4 class="title"><a href="https://github.com/MarroquinDillan" target="_blank">GitHub Repository</a></h4>
+          <p class="description" style="color:#fff;"> This is my github repository with code mainly in R, SQL, HTML, and TeX.</p>
         </div>
       </div>
     </div>
