--- a/projects/googleanalysis.html
+++ b/projects/googleanalysis.html
@@ -47,9 +47,38 @@
               <li><strong>Github Repository:</strong> <a href="https://github.com/MarroquinDillan/Coursera_R" target="_blank">Project Link</a></li>
             </ul>
 
-              <p>This is simply a repository of my Google Data Analytics Professional course and the practice work I have completed.</p>
-              <p>This course has further developed my fluency in analytical software, especially in SQL as this tool was unheard of for me.</p>
-              <p>If you feel interested in the realm of data analytics, or if you are simply curious on what this course entails, please have a look!</p>
+              <p>This is a repository of my Google Data Analytics Professional Certificate course and the practice work I have worked on. If you feel interested in the realm of data analytics, or if you are simply curious on what this course entails, please have a look!</p>
+              <p>The following is taken from the <a href="https://www.coursera.org/professional-certificates/google-data-analytics" target="_blank">Course Overview Page</a></p>
+                
+              <p style="text-align:left;color:#fff;padding: 0px 10px; text-decoration: underline;">What I learned:</p>
+              <li>Gain an immersive understanding of the practices and processes used by a junior or associate data analyst in their day-to-day job.</li>
+              <li>Learn key analytical skills (data cleaning, analysis, & visualization) and tools (spreadsheets, SQL, R programming, Tableau).</li>
+              <li>Understand how to clean and organize data for analysis, and complete analysis and calculations using spreadsheets, SQL and R programming.</li>
+              <li>Learn how to visualize and present data findings in dashboards, presentations and commonly used visualization platform.</li>
+                
+              <br><p style="text-align:left;color:#fff;padding: 0px 10px; text-decoration: underline;">Skills I gained:</p>
+                <li>Data Analysis</li>
+                <li>Creating case studies</li>
+                <li>Data Visualization</li>
+                <li>Data Cleansing</li>
+                <li>Developing a portfolio</li>
+                <li>Data Collection</li>
+                <li>Spreadsheet</li>
+                <li>Metadata</li>
+                <li>SQL</li>
+                <li>Data Ethics</li>
+                <li>Data Aggregation</li>
+                <li>Data Calculations</li>
+                <li>R Markdown</li>
+                <li>R Programming</li>
+                <li>Rstudio</li>
+                <li>Tableau Software</li>
+                <li>Presentation</li>
+                <li>Data Integrity</li>
+                <li>Sample Size Determination</li>
+                <li>Decision-Making</li>
+                <li>Problem Solving</li>
+                <li>Questioning</li>
           </div>
         </div>
       </div>
